<resources>
    <string name="app_name">DonorKothai</string>
    <string name="hi">Hi.</string>
    <string name="lets_get_started">Join with us !</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="by_tapping">By tapping "Login"  below , <a href="http://www.facebook.com/BloodBankFaridpur">DonorKothai</a> will send you as SMS to confirm your phone number. Data charges map apply. </string>
    <string name="proceed">Start</string>
    <string name="wait_for_auto_verify">Waiting to automatically detect an SMS sent to your mobile number</string>
    <string name="enter_6_digit_code">Enter 6 - Digit code</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>

    <string name="msg_invalid_phone_number">Invalid Phone Number!</string>
    <string name="msg_verification_already_in_progress">Please wait! Verification already in progress.</string>
    <string name="msg_otp_has_been_sent">An OTP has been sent to your phone number.</string>
    <string name="msg_encountered_an_unexpected_error">We have encountered an unexpected error while verifying your phone number!</string>
    <string name="msg_invalid_verification_code">Invalid verification code!</string>
    <string name="msg_sms_verification_limit_exceeded">Oops! You have exceeded the maximum limit for SMS verification, please try again later.</string>
    <string name="msg_currently_verifying_number">Currently we are verifying :\n\nCode:%1$s\nPhone:%2$s\n\nwould you like to edit the number?</string>

    <string name="resend_code_timer">RESEND CODE (%ds)</string>


    <string name="msg_no_internet_connection">No internet connection!</string>
    <string name="msg_please_wait">Please Wait.</string>


    <!--LoginScreen Activity-->
    <string name="enter_phone_number">Enter phone number</string>
    <string name="iam_in">I am in</string>
    <string name="verify_mobile_number">Verify mobile number.OTP has been sent"</string>
    <string name="verify">Verify</string>
    <string name="verification">Verification</string>
    <string name="verify_phone_number">VERIFY PHONE NUMBER</string>
    <string name="otp_sent_text">OTP has been sent to %1$s.</string>
    <string name="hint_otp">OTP</string>
    <string name="countdown">%1$d seconds left!</string>
    <string name="resend_code">Resend Code</string>


    <!--UserDetailActivity-->
    <string name="user_profile">Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_birth_date">Select Birth Date</string>
    <string name="hint_location">Select Your Location</string>
    <string name="create_now">Create Now</string>
    <string name="hint_email">Email</string>
    <string name="gender_male">Male</string>
    <string name="gender">Gender</string>
    <string name="gender_female">Female</string>
    <string name="date_hint">Select date</string>
    <string name="msg_sign_up_location_message">Your current location is required to sign you up so that you can get benefit of our loved community by sharing with them where you are.</string>
    <string name="msg_never_ask_sign_up">Sign up process cannot be completed without location access. Please navigate to application settings -> Permissions and grant location permission.</string>
    <string name="msg_first_name_empty">First name cannot be empty.</string>
    <string name="msg_last_name_empty">Last name cannot be empty.</string>
    <string name="msg_email_empty">Email cannot be empty.</string>
    <string name="msg_invalid_email">Please enter a valid email address.</string>
    <string name="msg_invalid_age">Please select your date of birth.</string>
    <string name="msg_invalid_location">Your location is not yet selected.</string>


    <!-- HomeActivity -->
    <string name="sign_out">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="map_theme">Map Theme</string>
    <string name="about">About</string>
    <string name="user_details">User Details</string>
    <string name="donor">Donor</string>
    <string name="receiver">Receiver</string>
    <string name="blood_request">Blood Request</string>
    <string name="get_direction">Get Direction</string>

    <!-- RequestDialogFragment -->
    <string name="submit">Submit</string>
    <string name="txt_purpose">Purpose of your blood request</string>
    <string name="i_want_to">I want to</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="title_create_request">Create Request</string>
    <string name="receiver_request_type">Request Blood</string>
    <string name="donor_request_type">Donate Blood</string>
    <string name="msg_blood_request_location_message">Your current location is required to create blood request. By this we can show everyone else where you are.</string>
    <string name="msg_never_ask_blood_request">Your current location is required for creating blood request. Please navigate to application settings -> Permissions and grant location permission.</string>


    <!-- General -->
    <string name="txt_open_settings">Open Settings</string>
    <string name="msg_location_permission_title">Location Permission Required.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="msg_empty_user">Could not find user details.</string>
    <string name="msg_invalid_phone">Please enter a valid phone number.</string>
    <string name="msg_something_went_wrong">Something went wrong!</string>
    <string name="msg_invalid_code">Invalid verification code.</string>
    <string name="msg_invalid_otp">OTP cannot be empty.</string>
    <string name="app_about">This is a free Blood Donation Mobile Application which helps needful patients to search for blood donors in their city or area and request for blood donation.Connecting blood donors and needy reduces time which increases the possibility of saving lives and also eliminates the shortage of blood.</string>
    <string name="you_are_here">You are here!</string>
    <string name="loading">Please wait....</string>
    <string name="button_ok">OK</string>
    <string name="error_fail_create_profile">Error! Failed to create profile  :(</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender_unclussified">Unclussified</string>
    <string name="phonecall">Call</string>


</resources>
