<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/receiver_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:padding="@dimen/dp_8"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/user_details"
                android:textColor="#444"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blood_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:text="A+"
                android:textColor="@color/md_red_400"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/lon"
                    android:text="x"
                    android:textColor="@color/md_red_400"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true" />

                <ImageView
                    android:id="@+id/img_loc"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/blood_group"
                    android:layout_toEndOf="@id/lat"
                    android:layout_toRightOf="@id/lat"
                    app:srcCompat="@drawable/ic_my_location" />

                <TextView
                    android:id="@+id/lon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/img_loc"
                    android:layout_toEndOf="@id/img_loc"
                    android:text="y"
                    android:textColor="@color/md_red_400"
                    android:textSize="8sp"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/img_loc" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:autoLink="phone"
                android:text="+880"
                android:textSize="14sp" />

            <Button
                android:id="@+id/direction"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/get_direction"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blood_group"
        android:text="Please save a pregnant mother, A+ blood is needed."
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableStart="@drawable/ic_call"
        android:drawablePadding="-20dp"
        android:drawableTint="@color/md_white_1000"
        android:background="@color/md_green_A700"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/phonecall"
        android:textColor="#fff"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:typeface="monospace"
        android:drawableLeft="@drawable/ic_call" />

</LinearLayout>